2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add gnm:Workbook as a possible magic
	for Gnumeric files, spotted by Jean Bréfort (Closes: #9424)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Wouter Bolsterlee
	<uws+freedesktop@xs4all.nl> to add *.rdfs and *.owl as suffixes for
	RDF files (Closes: #8389)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Matt Good <matt+fdo@matt-good.net>
	to add the eMusic download package mime-type and magic (Closes: #8105)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Andy Hedges
	<tmp1@hedges.net> to add more magic for the QuickTime files
	(Closes: #8936)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* po/POTFILES.skip: Patch from Torsten Schönfeld to add
	update-mime-database.c to the skipped files, as it was never
	translated anyway (Closes: #9565)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* shared-mime-info.pc.in: Patch from Ville Skyttä <ville.skytta@iki.fi>
	to move the shared-mime-info pkgconfig file to $(datadir), as it doesn't
	contain any arch-specific data (Closes: #9789)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* po/LINGUAS: Patch from Christian Persch to use po/LINGUAS
	to list the translated languages (Closes: #9619)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* update-mime-database.c: (open_or_die), (main): Patch from
	Yevgen Muntyan <muntyan@tamu.edu> to avoid abort()'ing when
	we can't open a specific file for writing (Closes: #9580)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* configure.in: Patch from Christian Persch to clean up the
	configure.in and Makefile.am files (Closes: #9618)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/x-bzip2 as an alias
	for bz2 archives, as used on Sourceforge, patch by Loïc Minier