@@ -1,5 +1,10 @@
 2007-02-02  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Add a mime-type for WBMP images
+	(Closes: #9186)
+
+2007-02-02  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Add gnm:Workbook as a possible magic
 	for Gnumeric files, spotted by Jean Bréfort (Closes: #9424)
 
